--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=.\Skillrack ICO.ico,0
+IconResource=E:\Projects\SkillRack-Solutions\Skillrack ICO.ico,0
 [ViewState]
 Mode=
 Vid=
